@@ -10,3 +10,5 @@ Initial release of librist, a fast and portable implementation of the Video Serv
    - One sender to many receivers, i.e. media server mode
    - Tested packet recovery up to 50% continuous
    - Sender to receiver jitter will not affect the output
+   - Fixed: Added mutex protection around FIFO access in rist_receiver_data_read2 to prevent rare race conditions and FIFO desynchronization when reading from multiple threads. Debug logs have been cleaned up for release.
+   - Changed: Replaced assertion in rist_receiver_data_read2 with error logging and a return code (-3) when FIFO desynchronization is detected, to avoid abrupt program termination and allow for graceful error handling.
